--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "prisma": "^6.3.1",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
+    "react-confetti": "^6.2.2",
     "react-datepicker": "^8.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.4.0",
+    "react-use": "^17.6.0",
     "recharts": "^2.15.1",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
