--- a/vercel.json
+++ b/vercel.json
@@ -2,11 +2,11 @@
     "crons": [
       {
         "path": "/api/cron/sync-history",
-        "schedule": "*/1 * * * *" 
+        "schedule": "0 0 * * *" 
       },
       {
         "path": "/api/cron/delete-code",
-        "schedule": "*/10 * * * *"
+        "schedule": "0 0 * * *"
       }
     ]
   }
